Fixed the screen flicker

--- a/tilt-site_tidy/sass/components/_module.scss
+++ b/tilt-site_tidy/sass/components/_module.scss
@@ -31,10 +31,6 @@
     &:hover .ratio{
         transform: scale(1.05);
     }
-
-    &.module--staff:hover .ratio{
-        transform: scale(1);
-    }
 }
 
 .module--visible{
@@ -129,14 +125,6 @@
 
         &:hover{
             transform: scale(1.05);
-        }
-    }
-
-    &.module--staff{
-        video{
-            &:hover{
-                transform: scale(1);
-            }
         }
     }
 
