--- a/tilt-site_tidy/sass/partials/_helpers.scss
+++ b/tilt-site_tidy/sass/partials/_helpers.scss
@@ -25,7 +25,7 @@
     transform: translateY(-50%);
 }
 
-.stop-scrolling {
-    height: 100%;
-    overflow: hidden;
-}
+// .stop-scrolling {
+//     // height: 100%;
+//     overflow: hidden;
+// }
